--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "serve:ssr:angular-project": "node dist/angular-project/server/server.mjs"
   },
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@angular/animations": "^17.0.0",
     "@angular/common": "^17.0.0",
