--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:angular-project": "node dist/angular-project/server/server.mjs"
+    "serve:ssr:angular-project": "node runfiles/server/server.mjs"
   },
   "private": true,
   "engines": {
