--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,14 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        "server" : {
+          "builder": "@angular-builders/custom-webpack:server",
+          "options": {
+            "customWebpackConfig": {
+              "path": "./webpack.server.config.js"
+            }
+          }
+        },
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
@@ -30,7 +38,8 @@
               "src/assets"
             ],
             "styles": [              
-              "src/styles.css"
+              "src/styles.css", 
+              "src/custom-theme.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
