--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@angular-builders/custom-webpack": "^17.0.0",
     "@angular/animations": "^17.0.0",
     "@angular/cdk": "^17.0.3",
     "@angular/common": "^17.0.0",
@@ -26,7 +27,9 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.6",
+    "@ngx-translate/core": "^15.0.0",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
